# mid

./: .gitignore  .goreleaser.yaml  .goreleaser.yml  .pre-commit-config.yaml  Makefile  README.md  dprint.json  go.mod  go.sum  justfile  pyproject.toml  schema-mid.json
agent/: .gitignore  agent.go  zzz_agent_binaries.go
ansible/: README.md  __init__.py  __main__.py  constants.py  context.py  generate.py  keyword_desc.yml  release.py
deployment-templates/: .goreleaser.yml  README-DEPLOYMENT.md  release.yml
env/: env.go  env_test.go
hack/: generate-agent-binaries.py  generate-ansible-types.py  set-version.sh
provider/: provider.go
sdk/: go.mod  go.sum
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumi_mid/: __init__.py  _inputs.py  _utilities.py  outputs.py  provider.py  pulumi-plugin.json
sdk/python/pulumi_mid/agent/: __init__.py  agent_ping.py  ansible_execute.py  exec_.py  file_stat.py  outputs.py
sdk/python/pulumi_mid/config/: __init__.pyi  vars.py
sdk/python/pulumi_mid/resource/: __init__.py  _inputs.py  ansible_task_list.py  apt.py  exec_.py  file.py  file_line.py  group.py  outputs.py  package.py  service.py  systemd_service.py  user.py
sdk/python/pulumi_mid/types/: _inputs.py  outputs.py
sdk/python/yournamespace_mid/: __init__.py  provider.py
sdk/python/yournamespace_mid/agent/: __init__.py  exec_.py
sdk/python/yournamespace_mid/resource/: __init__.py  apt.py  systemd_service.py
sdk/python/yournamespace_mid/types/: outputs.py
syncmap/: syncmap_test.go
tests/: agent_agent_ping_test.go  agent_ansible_execute_test.go  (+13 more)
(+1164 files in other folders)
